- Fixed a problem with more than one Service Provider on schedule table, when first is already busy, but second is not.
- Improved adding a new service provider, when is only one servive it will be checked by default.
- Fixed problems with capacity.
- Added an option to force load Appointment's scripts and styles.
- Improved column "Price".

2018-05-31 - 2.3.1
-------------------------------
- Fixed problem with adding workers if "Worker Locations" addon is active.

2018-05-24 - 2.3.0
-------------------------------
- Convert "Time base" on "Time Settings" to human readable. Props for David @ BBS.
- Fixed a problem with not available calendars on Service Provider profile.
- GDPR: Added ability to delete older appointments. You can set up how long presents appointments should be stored in the database.
- GDPR: Added ability to erase user personal data.
- GDPR: Added ability to export user personal data.
- GDPR: Added checkbox with the agreement to process personal data.
- GDPR: Added plugin information to default "Private Policy" page during auto-creation of this page.
- Improved few translation strings.
- Improved UX on "Payments" tab for MarketPress integration.
- Improved "Working Hours" and "Exceptions" tabs content on mobile devices.
- Refactored "Services" screen and use WP_List_Table class for the list.
- Refactored "Service Providers" screen and use WP_List_Table class for the list.

2018-05-21 - 2.2.8
-------------------------------
- Fixed a problem with an appointment create time, it showed "Unknown" for Time Formats: "g:i a" and "g:i A".
- Fixed a problem with an appointment date when we add an appointment on admin area.
- Fixed a problem with autoconfirmation free appointment.
- Fixed a problem with bottom bulk action on "Add-ons" tab.
- Fixed a problem with double cancellation emails.
- Fixed a problem with paddings on the weekly booking calendar.
- Improved the "app_my_appointments" shortcode and added a message when we have no appointments.