@@ -5,14 +5,14 @@
  * Services dropdown list shortcode.
  */
 class App_Shortcode_Services extends App_Shortcode {
-	public function __construct () {
+	public function __construct() {
 		$this->name = __( 'Services', 'appointments' );
 	}
 
 	public function get_defaults() {
 		$_workers = appointments_get_workers();
 		$workers = array(
-			array( 'text' => __( 'Any provider', 'appointments' ), 'value' => 0 )
+			array( 'text' => __( 'Any provider', 'appointments' ), 'value' => 0 ),
 		);
 		foreach ( $_workers as $worker ) {
 			/** @var Appointments_Worker $worker */
@@ -23,44 +23,44 @@ class App_Shortcode_Services extends App_Shortcode {
 			'select' => array(
 				'type' => 'text',
 				'name' => __( 'Title', 'appointments' ),
-				'value' => __('Please select a service:', 'appointments'),
-				'help' => __('Text above the select menu. Default: "Please select a service".', 'appointments'),
+				'value' => __( 'Please select a service:', 'appointments' ),
+				'help' => __( 'Text above the select menu. Default: "Please select a service".', 'appointments' ),
 			),
 			'show' => array(
 				'type' => 'text',
 				'name' => __( 'Show Button Text', 'appointments' ),
-				'value' => __('Show available times', 'appointments'),
-				'help' => __('Button text to show the results for the selected. Default: "Show available times".', 'appointments'),
-				'example' => __('Show available times', 'appointments'),
+				'value' => __( 'Show available times', 'appointments' ),
+				'help' => __( 'Button text to show the results for the selected. Default: "Show available times".', 'appointments' ),
+				'example' => __( 'Show available times', 'appointments' ),
 			),
 			'description' => array(
 				'type' => 'select',
 				'name' => __( 'Description', 'appointments' ),
 				'value' => 'excerpt',
-				'help' => __('Selects which part of the description page will be displayed under the dropdown menu when a service is selected . Selectable values are "none", "excerpt", "content". Default: "excerpt".', 'appointments'),
+				'help' => __( 'Selects which part of the description page will be displayed under the dropdown menu when a service is selected . Selectable values are "none", "excerpt", "content". Default: "excerpt".', 'appointments' ),
 				'options' => array(
 					array( 'text' => 'Excerpt', 'value' => 'excerpt' ),
-					array( 'text' => 'None', 'value' => ''),
+					array( 'text' => 'None', 'value' => '' ),
 					array( 'text' => 'Content', 'value' => 'content' ),
-				)
+				),
 			),
 			'thumb_size' => array(
 				'type' => 'text',
 				'name' => __( 'Thumbnail Size', 'appointments' ),
 				'value' => '96,96',
-				'help' => __('Inserts the post thumbnail if page has a featured image. Selectable values are "none", "thumbnail", "medium", "full" or a 2 numbers separated by comma representing width and height in pixels, e.g. 32,32. Default: "96,96".', 'appointments'),
+				'help' => __( 'Inserts the post thumbnail if page has a featured image. Selectable values are "none", "thumbnail", "medium", "full" or a 2 numbers separated by comma representing width and height in pixels, e.g. 32,32. Default: "96,96".', 'appointments' ),
 			),
 			'thumb_class' => array(
 				'type' => 'text',
 				'name' => __( 'Thumbnail Class', 'appointments' ),
 				'value' => 'alignleft',
-				'help' => __('CSS class that will be applied to the thumbnail. Default: "alignleft".', 'appointments'),
+				'help' => __( 'CSS class that will be applied to the thumbnail. Default: "alignleft".', 'appointments' ),
 			),
 			'autorefresh' => array(
 				'type' => 'checkbox',
 				'name' => __( 'Autorefresh', 'appointments' ),
 				'value' => 0,
-				'help' => __('If checked, Show button will not be displayed and page will be automatically refreshed as client changes selection. Note: Client cannot browse through the selections and thus check descriptions on the fly (without the page is refreshed). Default: disabled.', 'appointments'),
+				'help' => __( 'If checked, Show button will not be displayed and page will be automatically refreshed as client changes selection. Note: Client cannot browse through the selections and thus check descriptions on the fly (without the page is refreshed). Default: disabled.', 'appointments' ),
 			),
 			'order_by' => array(
 				'type' => 'select',
@@ -69,33 +69,33 @@ class App_Shortcode_Services extends App_Shortcode {
 				'options' => array(
 					array( 'text' => 'ID', 'value' => 'ID' ),
 					array( 'text' => 'ID DESC', 'value' => 'ID ASC' ),
-					array( 'text' => 'name', 'value' => 'name'),
-					array( 'text' => 'name DESC', 'value' => 'name DESC'),
-					array( 'text' => 'duration', 'value' => 'duration'),
-					array( 'text' => 'duration DESC', 'value' => 'duration DESC'),
+					array( 'text' => 'name', 'value' => 'name' ),
+					array( 'text' => 'name DESC', 'value' => 'name DESC' ),
+					array( 'text' => 'duration', 'value' => 'duration' ),
+					array( 'text' => 'duration DESC', 'value' => 'duration DESC' ),
 				),
-				'help' => __('Sort order of the services. Possible values: ID, name, duration, price. Optionally DESC (descending) can be used, e.g. "name DESC" will reverse the order. Default: "ID".', 'appointments'),
+				'help' => __( 'Sort order of the services. Possible values: ID, name, duration, price. Optionally DESC (descending) can be used, e.g. "name DESC" will reverse the order. Default: "ID".', 'appointments' ),
 			),
 			'worker' => array(
 				'type' => 'select',
 				'name' => __( 'Provider', 'appointments' ),
 				'value' => 0,
 				'options' => $workers,
-				'help' => __('In some cases, you may want to display services which are given only by a certain provider. In that case enter provider ID here. Default: "0" (all defined services). Note: Multiple selections are not allowed.', 'appointments'),
+				'help' => __( 'In some cases, you may want to display services which are given only by a certain provider. In that case enter provider ID here. Default: "0" (all defined services). Note: Multiple selections are not allowed.', 'appointments' ),
 			),
 			'ajax' => array(
 				'type' => 'checkbox',
 				'name' => __( 'AJAX', 'appointments' ),
 				'value' => 0,
-				'help' => __( 'If checked, Services thumbnails and descriptions will be loaded by AJAX. Recommended for sites with many services.', 'appointments' )
+				'help' => __( 'If checked, Services thumbnails and descriptions will be loaded by AJAX. Recommended for sites with many services.', 'appointments' ),
 			),
-			'_noscript' => array('value' => 0),
+			'_noscript' => array( 'value' => 0 ),
 
 		);
 	}
 
-	public function get_usage_info () {
-		return __('Creates a dropdown menu of available services.', 'appointments');
+	public function get_usage_info() {
+		return __( 'Creates a dropdown menu of available services.', 'appointments' );
 	}
 
 	public function process_shortcode( $args = array(), $content = '' ) {
@@ -115,22 +115,20 @@ class App_Shortcode_Services extends App_Shortcode {
 			if ( ! empty( $services ) && ! empty( $args['order_by'] ) && 'ID' !== $args['order_by'] ) {
 				$services = $this->_reorder_services( $services, $args['order_by'] );
 			}
-		}
-		else {
+		} else {
 			$services = appointments_get_services( array( 'orderby' => $args['order_by'] ) );
 		}
 
 		$services = apply_filters( 'app_services', $services );
 
 		// If there are no workers do nothing
-		if ( ! $services || empty( $services ) )
-			return '';
+		if ( ! $services || empty( $services ) ) {
+			return ''; }
 
 		$selected_service = 0;
 		if ( isset( $_REQUEST['app_service_id'] ) && appointments_get_service( $_REQUEST['app_service_id'] ) ) {
 			$selected_service = absint( $_REQUEST['app_service_id'] );
-		}
-		elseif ( $args['worker'] && appointments_get_worker( $args['worker'] ) ) {
+		} elseif ( $args['worker'] && appointments_get_worker( $args['worker'] ) ) {
 			$selected_service = $services[0]->ID;
 		}
 
@@ -145,64 +143,69 @@ class App_Shortcode_Services extends App_Shortcode {
 				</div>
 				<div class="app_services_dropdown_select">
 					<select id="app_select_services" name="app_select_services" class="app_select_services">
-						<?php foreach ( $services as $service ): ?>
-							<option value="<?php echo $service->ID; ?>" <?php selected( $service->ID, $selected_service ); ?>><?php echo stripslashes( $service->name ); ?></option>
-						<?php endforeach; ?>
+<?php
+foreach ( $services as $service ) {
+	if ( 0 === $selected_service ) {
+		$selected_service = $service->ID;
+	}
+?>
+					<option value="<?php echo $service->ID; ?>" <?php selected( $service->ID, $selected_service ); ?>><?php echo stripslashes( $service->name ); ?></option>
+				<?php } ?>
 					</select>
 					<input type="button" class="app_services_button" value="<?php echo esc_attr( $args['show'] ); ?>">
 				</div>
 			</div>
 
 			<div class="app_service_excerpts">
-				<?php if ( $args['autorefresh'] ): // Only display the selected service ?>
+				<?php if ( $args['autorefresh'] ) :  // Only display the selected service ?>
 					<?php
 						$service = appointments_get_service( $selected_service );
-						if ( $service ) {
-							$page = apply_filters( 'app_service_page', $service->page, $service->ID );
-							?>
-								<div class="app_service_excerpt" id="app_service_excerpt_<?php echo $service->ID; ?>">
-									<?php
-									$service_description = '';
-									switch ($args['description'] ) {
-										case 'none': {
-											break;
-										}
-										case 'content': {
-											$service_description = $appointments->get_content($page, $args['thumb_size'], $args['thumb_class'], $service->ID );
-											break;
-										}
-										default: {
-											$service_description = $appointments->get_excerpt($page, $args['thumb_size'], $args['thumb_class'], $service->ID );
-											break;
-										}
+					if ( $service ) {
+						$page = apply_filters( 'app_service_page', $service->page, $service->ID );
+						?>
+							<div class="app_service_excerpt" id="app_service_excerpt_<?php echo $service->ID; ?>">
+								<?php
+								$service_description = '';
+								switch ( $args['description'] ) {
+									case 'none': {
+										break;
 									}
-									echo apply_filters('app-services-service_description', $service_description, $service, $args['description'] );
-									?>
+									case 'content': {
+										$service_description = $appointments->get_content( $page, $args['thumb_size'], $args['thumb_class'], $service->ID );
+										break;
+									}
+									default: {
+										$service_description = $appointments->get_excerpt( $page, $args['thumb_size'], $args['thumb_class'], $service->ID );
+										break;
+									}
+								}
+								echo apply_filters( 'app-services-service_description', $service_description, $service, $args['description'] );
+								?>
 								</div>
 							<?php
-						}
+					}
 
 					?>
-				<?php else: ?>
-					<?php foreach ( $services as $service ): ?>
+				<?php else : ?>
+					<?php foreach ( $services as $service ) :  ?>
 						<?php $page = apply_filters( 'app_service_page', $service->page, $service->ID ); ?>
 						<div <?php echo $service->ID != $selected_service ? 'style="display:none"' : ''; ?> class="app_service_excerpt" id="app_service_excerpt_<?php echo $service->ID; ?>">
 							<?php
 							$service_description = '';
-							switch ($args['description'] ) {
+							switch ( $args['description'] ) {
 								case 'none': {
 									break;
 								}
 								case 'content': {
-									$service_description = $appointments->get_content($page, $args['thumb_size'], $args['thumb_class'], $service->ID, absint( $args['ajax'] ) );
+									$service_description = $appointments->get_content( $page, $args['thumb_size'], $args['thumb_class'], $service->ID, absint( $args['ajax'] ) );
 									break;
 								}
 								default: {
-									$service_description = $appointments->get_excerpt($page, $args['thumb_size'], $args['thumb_class'], $service->ID, absint( $args['ajax'] ) );
+									$service_description = $appointments->get_excerpt( $page, $args['thumb_size'], $args['thumb_class'], $service->ID, absint( $args['ajax'] ) );
 									break;
 								}
 							}
-							echo apply_filters('app-services-service_description', $service_description, $service, $args['description'] );
+							echo apply_filters( 'app-services-service_description', $service_description, $service, $args['description'] );
 							?>
 						</div>
 					<?php endforeach; ?>
@@ -214,21 +217,20 @@ class App_Shortcode_Services extends App_Shortcode {
 
 		$s = ob_get_clean();
 
-		$wcalendar = isset($_GET['wcalendar']) && (int)$_GET['wcalendar']
-			? (int)$_GET['wcalendar']
+		$wcalendar = isset( $_GET['wcalendar'] ) && (int) $_GET['wcalendar']
+			? (int) $_GET['wcalendar']
 			: false
 		;
 
 		// First remove these parameters and add them again to make wcalendar appear before js variable
-		$href = add_query_arg( array( "wcalendar"=>false, "app_provider_id" => false, "app_service_id" => false ) );
-		$href = add_query_arg( array( "wcalendar"=>$wcalendar, "app_service_id" => "__selected_service__" ), $href );
+		$href = add_query_arg( array( 'wcalendar' => false, 'app_provider_id' => false, 'app_service_id' => false ) );
+		$href = add_query_arg( array( 'wcalendar' => $wcalendar, 'app_service_id' => '__selected_service__' ), $href );
 		if ( isset( $_GET['app_provider_id'] ) ) {
-			$href = add_query_arg( "app_provider_id", $_GET['app_provider_id'], $href );
+			$href = add_query_arg( 'app_provider_id', $_GET['app_provider_id'], $href );
 		}
 
 		$href = apply_filters( 'app_service_href', $href );
 		$href = $this->_js_esc_url( $href ) . '#app_services_dropdown_title';
-
 
 		if ( ! $args['_noscript'] ) {
 			wp_enqueue_script( 'app-shortcode-services', appointments_plugin_url() . 'includes/shortcodes/js/app-services.js', array( 'jquery' ) );
@@ -246,11 +248,10 @@ class App_Shortcode_Services extends App_Shortcode {
 				'autorefresh' => $args['autorefresh'],
 				'ajax' => $args['ajax'],
 				'first_service_id' => appointments_get_services_min_id(),
-				'reload_url' => $href
+				'reload_url' => $href,
 			);
 			wp_localize_script( 'app-shortcode-services', 'appointmentsStrings', $i10n );
 		}
-
 
 		return $s;
 	}
@@ -262,42 +263,41 @@ class App_Shortcode_Services extends App_Shortcode {
 	 *
 	 * @return string Usable URL
 	 */
-	private function _js_esc_url ($raw='') {
-		$url = esc_url($raw);
-		$parts = explode('?', $url);
+	private function _js_esc_url( $raw = '' ) {
+		$url = esc_url( $raw );
+		$parts = explode( '?', $url );
 
-		if (empty($parts[1])) return $url;
-		if (false === strpos($parts[1], '#038;') && false === strpos($parts[1], '&amp;')) return $url;
+		if ( empty( $parts[1] ) ) { return $url; }
+		if ( false === strpos( $parts[1], '#038;' ) && false === strpos( $parts[1], '&amp;' ) ) { return $url; }
 
-		$parts[1] = preg_replace('/&(#038|amp);/', '&', $parts[1]);
+		$parts[1] = preg_replace( '/&(#038|amp);/', '&', $parts[1] );
 
-		return join('?', $parts);
+		return join( '?', $parts );
 	}
 
 	/**
 	 * Sort the services when we can't do so via SQL
 	 */
-	private function _reorder_services ($services, $order) {
-		if (empty($services)) return $services;
-		list($by,$direction) = explode(' ', trim($order), 2);
+	private function _reorder_services( $services, $order ) {
+		if ( empty( $services ) ) { return $services; }
+		list($by,$direction) = explode( ' ', trim( $order ), 2 );
 
-		$by = trim($by) ? trim($by) : 'ID';
-		$by = in_array($by, array('ID', 'name', 'capacity', 'duration', 'price', 'page'))
+		$by = trim( $by ) ? trim( $by ) : 'ID';
+		$by = in_array( $by, array( 'ID', 'name', 'capacity', 'duration', 'price', 'page' ) )
 			? $by
 			: 'ID'
 		;
 
-		$direction = trim($direction) ? strtoupper(trim($direction)) : 'ASC';
-		$direction = in_array($direction, array('ASC', 'DESC'))
+		$direction = trim( $direction ) ? strtoupper( trim( $direction ) ) : 'ASC';
+		$direction = in_array( $direction, array( 'ASC', 'DESC' ) )
 			? $direction
 			: 'ASC'
 		;
 
 		$comparator = 'ASC' === $direction
-			? create_function('$a, $b', "return strnatcasecmp(\$a->{$by}, \$b->{$by});")
-			: create_function('$a, $b', "return strnatcasecmp(\$b->{$by}, \$a->{$by});")
-		;
-		usort($services, $comparator);
+			? create_function( '$a, $b', "return strnatcasecmp(\$a->{$by}, \$b->{$by});" )
+			: create_function( '$a, $b', "return strnatcasecmp(\$b->{$by}, \$a->{$by});" );
+		usort( $services, $comparator );
 
 		return $services;
 	}
